@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.125 2011/08/02 21:48:56 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.126 2011/08/03 15:53:12 cardoe Exp $
+
+*libvirt-0.9.4 (03 Aug 2011)
+
+  03 Aug 2011; Doug Goldstein <cardoe@gentoo.org> +libvirt-0.9.4.ebuild:
+  Version bump
 
   02 Aug 2011; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.2.ebuild:
   Remove older version
